# muras-lite

./: README.md  pyproject.toml  requirements.txt
examples/: 01_compare_embedders.py  02_vector_store_usage.py  04_end_to_end_rag.py  custom_embedder_example.py
sample/: sample_input.json
src/muras/: __init__.py  cli.py  metrics.py
src/muras/embedders/: __init__.py  base.py  blip_embedder.py  clip_embedder.py  colpali_embedder.py  sentence_transformer_embedder.py  siglip_embedder.py
src/muras/generators/: __init__.py  base.py  qwen_generator.py
src/muras/vectorstores/: README.md  __init__.py  base.py  chroma_store.py  faiss_store.py
tests/: test_smoke.py
